# Games_in_C

./: CMakeLists.txt  README.md  det.c  game_of_life.c  invert.c  mandelbrot.c
Donut/: main.c  main.h
GameOfLife/: game.c  game_of_life.c
Mandelbrot/: mandelbrot.c
PolishNotation/: det.c  invert.c
ping_pong/: Makefile  README.md  main.c  ping_pong.c
